# TestLabOne

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
lib/: ArraySum.cpp  ArraySum.h
tests/: ArraySumTest.cpp
